# webassembly-curl-ssl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.sh  revert-patches.sh
.github/workflows/: ci.yml
libs/curl/: CMakeLists.txt  curl.patch
libs/openssl/: CMakeLists.txt  openssl.patch
libs/wasm-micro-runtime/: CMakeLists.txt  wasm-micro-runtime.patch
libs/zlib/: CMakeLists.txt
tests/: CMakeLists.txt  encoding.c  multi.c  simple.c  websockets.c
